--- a/index.html
+++ b/index.html
@@ -49,18 +49,19 @@
       
       <div class="row">
   <div class="span8">
-    <h1>RZabbix</h1>
-
-<p>RZabbix is an R module for working with the <a href="https://www.zabbix.com/documentation/3.0/manual/api/reference">Zabbix API</a>.</p>
-
-<p><a href="http://cran.r-project.org/web/packages/RZabbix"><img src="http://www.r-pkg.org/badges/version/RZabbix" alt="CRAN_Status_Badge"/></a>
+    <p><a href="http://cran.r-project.org/web/packages/RZabbix"><img src="http://www.r-pkg.org/badges/version/RZabbix" alt="CRAN_Status_Badge"/></a>
 <a href="http://cran.rstudio.com/package=RZabbix"><img src="http://cranlogs.r-pkg.org/badges/RZabbix" alt="Downloads"/></a>
-<a href="http://cranlogs.r-pkg.org/badges/grand-total/RZabbix"><img src="http://cranlogs.r-pkg.org/badges/grand-total/RZabbix?color=orange" alt="Total Downloads"/></a></p>
-
-<p><a href="http://www.repostatus.org/#active"><img src="http://www.repostatus.org/badges/latest/active.svg" alt="Project Status: Active - The project has reached a stable, usable state and is being actively developed."/></a>
+<a href="http://cranlogs.r-pkg.org/badges/grand-total/RZabbix"><img src="http://cranlogs.r-pkg.org/badges/grand-total/RZabbix?color=orange" alt="Total Downloads"/></a>
+<a href="http://www.repostatus.org/#active"><img src="http://www.repostatus.org/badges/latest/active.svg" alt="Project Status: Active - The project has reached a stable, usable state and is being actively developed."/></a>
 <a href="https://travis-ci.org/MarcinKosinski/RZabbix"><img src="https://api.travis-ci.org/MarcinKosinski/RZabbix.png" alt="Build Status"/></a>
 <a href="https://github.com/MarcinKosinski/RZabbix/pulls"><img src="http://githubbadges.herokuapp.com/MarcinKosinski/RZabbix/pulls.svg?style=flat" alt="Pending Pull-Requests"/></a>
 <a href="https://github.com/MarcinKosinski/RZabbix/issues"><img src="http://githubbadges.herokuapp.com/MarcinKosinski/RZabbix/issues.svg" alt="Github Issues"/></a></p>
+
+<h1>RZabbix</h1>
+
+<p>RZabbix is an R module for working with the <a href="https://www.zabbix.com/documentation/3.0/manual/api/reference">Zabbix API</a>.</p>
+
+<p><img src="https://raw.githubusercontent.com/MarcinKosinski/RZabbix/master/orly.png" alt="Orly cover"/></p>
 
 <h1>Getting started</h1>
 
